# Sophia_Pointing_IK_Solver

./: .rosinstall  LICENSE  Readme.md  nisl:sophia-pointing-ik  pointing_ik_launch.bash  standard_rviz_config.rviz
SophiaKinematicsData/: leftArmWristEnvelope.csv  leftArmWristEnvelopeJointVals.csv  rightArmWristEnvelope.csv  rightArmWristEnvelopeJointVals.csv
docker/: Dockerfile  head-melodic-hr_msgs_0.3.21_amd64.deb
moveit/: .gitignore
moveit/moveit_core/: CMakeLists.txt
moveit/moveit_kinematics/: CMakeLists.txt
sophia_pointing_ik/: CMakeLists.txt  package.xml
sophia_pointing_ik/include/sophia_pointing_ik/: SophiaModelHandler.h  VerboseLevel.hh
sophia_pointing_ik/launch/: main.launch
sophia_pointing_ik/src/: SophiaModelHandler.cpp  main_node.cpp
sophia_robot_description/: CMakeLists.txt  package.xml
sophia_robot_description/urdf/: common.gazebo.xacro  description.xacro  macros.xacro  mimic_macro.xacro  sophia.gazebo.xacro  sophia.transmission.xacro  sophia_left_hand.gazebo.xacro  sophia_left_hand.transmission.xacro  sophia_left_hand_v3.urdf.xacro  sophia_right_hand.gazebo.xacro  sophia_right_hand.transmission.xacro  sophia_right_hand_v3.urdf.xacro  sophia_robot.urdf  sophia_v2.urdf.xacro  sophia_v2.urdf.xacro.backup
sophia_robot_left_arm_group1_ikfast_plugin/: CMakeLists.txt  package.xml  sophia_robot_left_arm_group1_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
sophia_robot_left_arm_group1_ikfast_plugin/src/: sophia_robot_left_arm_group1_ikfast_moveit_plugin.cpp  sophia_robot_left_arm_group1_ikfast_solver.cpp
sophia_robot_left_arm_group2_ikfast_plugin/: CMakeLists.txt  package.xml  sophia_robot_left_arm_group2_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
sophia_robot_left_arm_group2_ikfast_plugin/src/: sophia_robot_left_arm_group2_ikfast_moveit_plugin.cpp  sophia_robot_left_arm_group2_ikfast_solver.cpp
sophia_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
sophia_robot_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  sophia_robot.srdf  stomp_planning.yaml
sophia_robot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  (+8 more)
sophia_robot_right_arm_group1_ikfast_plugin/: CMakeLists.txt  package.xml  sophia_robot_right_arm_group1_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
sophia_robot_right_arm_group2_ikfast_plugin/: CMakeLists.txt  package.xml  sophia_robot_right_arm_group2_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
(+160 files in other folders)
